--- a/CompanyRestAPI/CompanyRestAPI.csproj
+++ b/CompanyRestAPI/CompanyRestAPI.csproj
@@ -159,6 +159,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\BasicAuthenticationAttribute.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
