--- a/CompanyRestAPI/CompanyRestAPI.csproj
+++ b/CompanyRestAPI/CompanyRestAPI.csproj
@@ -131,6 +131,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <EmbeddedResource Include="Custom\basic-authentication.js" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Models\CompanyDB.Context.tt">
